<resources>
    <string name="app_name" translatable="false">PAW</string>

    <string name="service">plus.google.com or google</string>
    <string name="key">Secret key</string>
    <string name="get_pass">Get password</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_list">List of services</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_save_history">Save history</string>
    <string name="settings_save_history_instructions">Your services are saving if this checkbox is checked.</string>
    <string name="settings_set_pin">Set PIN</string>
    <string name="settings_set_pin_dialog_text">Your key phrase could be the attacker in the case of receipt of the access to the files of the device.</string>
    <string name="settings_wrong_pin_toast">PIN format is incorrect! PIN must be 4 digits.</string>
    <string name="settings_set_pin_apply">Accept</string>
    <string name="settings_set_pin_abort">Cancel</string>
    <string name="settings_right_pin_toast">PIN has accepted. Your keyphrase will be saved.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_text">Enter PIN or change it on the Settings page if you forget it</string>
    <string name="login_hint" translatable="false">PIN</string>
    <string name="login_to_applications_settings">Reset data</string>
    <string name="main_get_pin_dialog_title">Enter PIN</string>
    <string name="settings_set_key_dialog_text" />
    <string name="settings_add_key">Add a key</string>
    <string name="settings_remove_key">Remove key</string>
    <string name="toast_copied">Password had copied</string>
    <string name="toast_back_once">Press once again to exit</string>
    <string name="menu_clear_history">Clear</string>
    <string name="toast_history_press_again_to_clear">Are you sure?\r\nPress again to clear</string>
    <string name="menu_about">About&#8230;</string>
    <string name="about_text">This application is the part of <b>PAW</b> project.\nAuthor: HRAshton\nAdditiol info on the official site: http://paw.ucoz.net\nThanks:\n</string>
    <string name="title_activity_about">About</string>
    <string name="settings_set_pin_dialog_title">Enter PIN</string>
</resources>
