<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    tools:context="hrashton.ocpg.SettingsActivity"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/background_settings"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_save_history"
                android:id="@+id/settings_cb_save_history"
                android:checked="true"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settings_save_history_instructions"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/settings_save_history_instructions"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/toggleButton"
                android:checked="true"
                android:textOn="@string/settings_remove_key"
                android:textOff="@string/settings_add_key" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText2"
                android:enabled="false" />
        </TableRow>

    </TableLayout>
</FrameLayout>
